# automated-code-review-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CITATION.cff  Dockerfile  EVALUATION.md  LICENSE  README.md  REFACTORING_SUMMARY.md  RESEARCH.md  VERIFICATION.md  azure-pipelines.yml  pyproject.toml
code_review_agent/: __init__.py  github_client.py  main.py  rag_system.py  review_engine.py
code_review_agent/evaluation/: __init__.py  fixtures.py  metrics.py  runner.py
guidelines/: python_best_practices.md  typescript_react_standards.md
tests/: test_review_engine.py
tests/fixtures/prs/: py-sql-injection-001.json
